# straky-graph

./: main.ipynb  main.py  pyproject.toml
straky/: __init__.py  board.py  graph.py
straky/player/: __init__.py  abc.py  random.py  text_input.py
